kubernetes/apps/ai/litellm/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: litellm
spec:
  hostnames:
    - litellm.ds47.dev
  parentRefs:
    - name: kgateway-internal
      namespace: network
  rules:
    - backendRefs:
        - name: litellm
          port: 4000
